# GameEngine

./: CMakeLists.txt
.github/workflows/: linux-build.yml  windows-build.yml
FIghtClub/: CMakeLists.txt
FIghtClub/Automation/: automation.py
FIghtClub/Source/Game/: Weapon.cpp
FIghtClub/Source/Tests/: main.cpp
Source/: main.cpp
Source/Functions/: Math.cpp  Math.h
Source/Game/: Character.cpp  Character.h
